bug 467722 - don't short-circuit pref font search unless the previous search really did use the first font. r=jdaggett a=roc