gfx/thebes/gfxFont.cpp
@@ -2653,11 +2653,11 @@ gfxFontGroup::WhichPrefFontSupportsChar(PRUint32 aCh)
         }
 
         // find the first pref font that includes the character
-        PRUint32  i, numPrefs;
+        PRUint32  j, numPrefs;
         numPrefs = families.Length();
-        for (i = 0; i < numPrefs; i++) {
+        for (j = 0; j < numPrefs; j++) {
             // look up the appropriate face
-            gfxFontFamily *family = families[i];
+            gfxFontFamily *family = families[j];
             if (!family) continue;
 
             // if a pref font is used, it's likely to be used again in the same text run.
@@ -2679,7 +2679,7 @@ gfxFontGroup::WhichPrefFontSupportsChar(PRUint32 aCh)
                 mLastPrefFamily = family;
                 mLastPrefFont = prefFont;
                 mLastPrefLang = charLang;
-                mLastPrefFirstFont = (i == 0);
+                mLastPrefFirstFont = (i == 0 && j == 0);
                 return prefFont.forget();
             }
 
